# Crest

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  build.bat  build.sh  conanfile.py  conanfile.txt  mkdocs.yml  pyproject.toml  run_all_tests.bat  vcpkg.json  xmake.lua
.github/ISSUE_TEMPLATE/: bug_report.md  docs_issue.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build.yml  ci.yml  codeql.yml  docs.yml  release.yml  tests.yml
cmake/: CrestConfig.cmake.in
docs/: _config.yml  api.md  c_api.md  configuration.md  contributing.md  cpp_api.md  database.md  examples.md  file_upload.md  index.md  installation.md  license.md  logging.md  middleware.md  performance.md  quickstart.md  schemas.md  status_codes.md  templates.md  websocket.md
docs/examples/: README.md  advanced-api-documentation.md  basic-api-documentation.md  integration-examples.md  testing-examples.md
docs/features/: api-documentation.md
examples/advanced/: advanced.c
examples/basic/: main.c
examples/c/: main.c
examples/cpp/: concurrent_example.cpp  database_example.cpp  main.cpp  middleware_example.cpp  schema_example.cpp  status_codes_example.cpp  template_example.cpp  upload_example.cpp  websocket_example.cpp
include/crest/: console.h  crest.h  crest.hpp  database.hpp  json.h  middleware.h  middleware.hpp  openapi.h  router.h  template.hpp  types.h  upload.hpp  websocket.hpp
include/crest/internal/: app_internal.h
python/crest/: bindings.py
src/core/: app.c  app.cpp  config.c  console.c  middleware.c  mutex_wrapper.cpp  request.c  response.c  router.c  server.c  thread_pool.c
src/database/: database.cpp
src/docs/: api_docs.c  openapi.c
src/http/: request.c  response.c  response.cpp
src/middleware/: cors.cpp  middleware.cpp
src/router/: router.cpp
src/server/: server.cpp
src/swagger/: openapi.cpp
src/template/: template.cpp
src/templates/docs/: playground.html
src/upload/: upload.cpp
src/utils/: json.c  json_schema_detector.hpp  logger.c  logger.cpp  schema_parser.hpp  string_utils.c  thread_pool.hpp
src/websocket/: websocket.cpp
tests/: CMakeLists.txt  test_basic.cpp  test_crest.cpp  test_database.cpp  test_duplicate_routes.c  test_integration.c  test_json.c  test_middleware.cpp  test_pattern_matching.c  test_router.c  test_template.cpp  test_upload.cpp  test_websocket.cpp
