[project]
name = "crest-dev-env"
version = "1.0.0"
description = "Python development environment for Crest C++ REST API Framework (Conan package manager)"
readme = "UV_USAGE.md"
requires-python = ">=3.8"
dependencies = [
    "conan>=2.0.0",
    "cffi>=1.15.0",
]

[project.optional-dependencies]
dev = [
    "cmake>=3.25.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]
