[project]
name = "crest"
version = "0.0.0"
description = "Crest: a C/C++ Restful API framework"
authors = [
    { name ="Muhammad Fiaz", email = "contact@muhammadfiaz.com" },
]
license = { text = "MIT" }
url = "https://github.com/muhammadfiaz/crest"
homepage = "https://github.com/muhammadfiaz/crest"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[dependency-groups]
dev = [
    "conan>=2.21.0",
    "ruff>=0.14.1",
]
