[project]
name = "crest"
version = "0.0.0"
description = "Crest: a C/C++ Restful API framework"
authors = [
    { name ="Muhammad Fiaz", email = "contact@muhammadfiaz.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[project.urls]
Homepage = "https://github.com/muhammad-fiaz/Crest"
Documentation = "https://muhammad-fiaz.github.io/Crest"
Repository = "https://github.com/muhammad-fiaz/Crest"
Issues = "https://github.com/muhammad-fiaz/Crest/issues"

[dependency-groups]
dev = [
    "conan>=2.21.0",
    "ruff>=0.14.1",
]
